welcome.lessons.welcome.methods.slug.SlugTracking.scala.error
SlugTracking:6: error: reassignment to val
    		if (getCouleurSol=Color.green) return true
                                 ^SlugTracking:6: error: type mismatch;
 found   : Unit
 required: Boolean
    		if (getCouleurSol=Color.green) return true
                ^